<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/netdisc_bg"
    android:orientation="vertical">

    <!--
        <com.android.hcframe.TopBarView
            android:id="@+id/details_top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:background="@color/topbar_bg" />
    -->

    <LinearLayout
        android:id="@+id/my_skydrive"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/my_skydrive_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="19dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_img" />

        <TextView
            android:id="@+id/my_skydrive_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_my_skydrive_text"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/my_skydrive_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:background="@color/netdisc_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_working_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/my_working_group_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="19dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_working_group_img" />

        <TextView
            android:id="@+id/my_working_group_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_my_working_group_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:background="@color/netdisc_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/my_share_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="19dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_share_img" />

        <TextView
            android:id="@+id/my_share_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_my_share_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transport_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/transport_list_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="19dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_transport_list_img" />

        <TextView
            android:id="@+id/transport_list_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_transport_list_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:background="@color/netdisc_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycle_bin"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recycle_bin_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="19dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_recycle_bin_img" />

        <TextView
            android:id="@+id/recycle_bin_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_recycle_bin_text"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/netdisc_my_skydrive_next" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/netdisc_item_bg"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/netdisc_wifi_text"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/switch_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:src="@drawable/netdisc_switch_off" />
    </LinearLayout>

</LinearLayout>